# msmp

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  run_coverage_report.sh  run_integration_coverage.sh  run_unit_coverage.sh
benches/: my_benchmark.rs
src/: elc_algorithm.rs  error.rs  msmp.rs  one_d_packed_array.rs  rlt.rs  two_d_array.rs  word_list.rs
tests/: simple_tests.rs
tests/data/: pascal_keyword_subset.txt  run_aspell_dump.sh
