[package]
name = "msmp"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Library for preforming minimal sparse matrix packing"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "msmp"
path = "src/msmp.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
